@startuml
abstract class IParticipant {
    + IParticipant()
    + ~IParticipant()
    + {abstract} jouerTour(chantier: Table) 
    + {abstract} getPseudo(): string
    + {abstract} estJoueur(): bool
}

class Joueur {
    - cite: Cite
    - pierres: size_t
    - ControleurJoueur* controleur
    + Joueur(ctrl: ControleurJoueur*)
    + jouerTour(chantier: Table)
    + estJoueur(): bool
    + getCite(): Cite
    + getPierres(): size_t
    + getPseudo(): string
}

class IllustreArchitecte {
    - tuiles_collectees: vector<Tuile*>
    + IllustreArchitecte(ctrl: IControleurParticipant*)
    + jouerTour(chantier: Table) 
    + estJoueur(): bool
    + getTuiles(): vector<Tuile*>
    + ~IllustreArchitecte()
}

class ControleurJoueur {
  - dialogue : IDialogueStrategy* 
  - pseudo : string 
  - choisirTuile(pierres: size_t&, chantier: Table)
  + ControleurJoueur(p: string, d: IDialogueStrategy*)
  + getPseudo() : string 
  + jouerTour(cite: Cite& , pierres: size_t& , chantier: Table)
}

IParticipant <|-- Joueur
IParticipant <|-- IllustreArchitecte

ControleurJoueur o-- "1" IDialogueStrategy
Joueur o-- "1" ControleurJoueur
Joueur *-- "1" Cite
IllustreArchitecte o-- "*" Tuile

@enduml